docs : share secrets
